# 324_portolio_app1_trelles-william

.github/workflows/: main.yml
addon-todo-app/: README.md  fix-manifest.js  package-lock.json  package.json  wxt.config.ts
addon-todo-app/entrypoints/: background.ts
addon-todo-app/entrypoints/popup/: index.html  main.ts  style.css
addon-todo-app/libs/: apiAuth.ts  apiTasks.ts  tableTasks.ts
addon-todo-app/types/: tasks.ts
doc/: R-rapport_portfolio_P_324-WilliamTrelles.docx  ~$rapport_portfolio_P_324-WilliamTrelles.docx
doc/gitjournal-main/: .gitignore  Cargo.toml  LICENSE  README.md
doc/gitjournal-main/htmljs/: .config.js.example  gitjournal.html
doc/gitjournal-main/src/: cli.rs  github.rs  main.rs  model.rs  spreadsheet.rs
doc/gitjournal-main/test/: data1.xlsx
